# news

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  country_catalog.py  database.py  main.py  models.py  repository.py
backend/app/api/: __init__.py  routes.py
backend/app/cache/: __init__.py  store.py
backend/app/collectors/: __init__.py  news.py  traffic.py
backend/app/providers/: __init__.py  news.py  programs.py  traffic.py  trends.py
backend/tests/: conftest.py  test_api.py  test_catalog_and_providers.py  test_trends.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: e2e-check.mjs
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: CountryPanel.tsx  MapView.tsx  ProgramPanel.tsx  SignalChainView.tsx  StatusStrip.tsx
frontend/src/lib/: countries.ts  infrastructure.ts
frontend/src/styles/: app.css
