[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-watch"
version = "0.1.0"
description = "Global routes and news prototype with FastAPI, SQLite and realtime map feeds."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.34,<0.35",
  "httpx>=0.28,<0.29",
  "pycountry>=24.6.1",
  "beautifulsoup4>=4.12,<5.0",
  "websockets>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
